--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -267,7 +267,7 @@ ello con maggiore capacità espressiva. Restano comunque entrambi dei modelli
 troppo astratti per poter essere implementati realmente. Aggiungendo vincoli
 2 Si tratta di un consorzio di aziende per le telecomunicazioni, con l'obiettivo di andare
 oltre OSI: l'idea è quella di immaginare anche i possibili servizi, fornendo un modello più
-coordinato, e un'infrastruttura con molti provider: si denisce un accordo/negoziazione fra i
+coordinato, e un'infrastruttura con molti provider: si definisce un accordo/negoziazione fra i
 fornitori dei servizi e i clienti, per poter per esempio stabilire la QoS, e quindi si fornisce il
 servizio con i parametri indicati
 12
@@ -317,7 +317,7 @@ P . In particolare, si può definire come fattore di carico, o loading factor:
 N
 (6)
 P
-che denisce la complessità come viene suddivisa su ogni nodo. Vi possono
+che definisce la complessità come viene suddivisa su ogni nodo. Vi possono
 essere diversi casi:
 L=
 13
