--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -307,7 +307,7 @@ a $\rightarrow$ b $\Rightarrow$ T S(a) $<$ T S(b)
 Questa è la condizione di clock logico, il quale può solo crescere. Si tratta di
 realizzare quindi una sorta di timestamp, per identicare in maniera univoca gli
 eventi nel sistema!
-Nel caso di una trasmissione, per cui a $\in$ Pi e b $\in$ Pj , si denisce la relazione
+Nel caso di una trasmissione, per cui a $\in$ Pi e b $\in$ Pj , si definisce la relazione
 di clock logico:
 a $\rightarrow$ b $\Rightarrow$ LCi (a) $<$ LCi (b)
 (21)
@@ -494,7 +494,7 @@ dove le entità possono cambiare ruolo.
 si fosse ripresentato il vecchio token, quello d'elezione sarebbe stato eliminato
 49
 \subsection{Snapshot distribuiti}
-Come si denisce uno stato nel distribuito? Si vuole uno stato globale, ma
+Come si definisce uno stato nel distribuito? Si vuole uno stato globale, ma
 non è sempre possibile salvarsi tutta la memoria sul disco, specialmente con
 un'alta replicazione. L'idea è quindi quella di realizzare un sistema in cui i
 processi si scambino dei messaggi, mediante dei canali fortemente orientati, per
