--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -94,7 +94,7 @@ di utilizzare socket, protocolli standard de facto come TCP/IP...
 Tuttavia, è proprio questo il motivo per cui si vengono a definire dei middleware, ovvero delle strutture in grado di
 fornire un supporto completo alla comunicazione in remoto. Per esempio, Java Remot Method Invocation è un sistema in
 grado di estendere la semantica per riferimento locale, al remoto, cercando di fornire un sistema omogeneo per poter
-accedere sia ad oggetti locali che remoti. Nel caso specico di RMI, per esempio, si utilizza un classico pattern dei
+accedere sia ad oggetti locali che remoti. Nel caso specifico di RMI, per esempio, si utilizza un classico pattern dei
 middleware, il proxy come delegato per la comunicazione. Si realizzano infatti uno stub lato cliente e uno skeleton lato
 server, che riescono a garantire un qualcosa di simile alla normale comunicazione locale. Si cerca di presentare
 un sistema trasparente per l'utente!
