--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -192,7 +192,7 @@ zando un ordinamento atomico, che è globale. Questo perché è un ordinamento
 ee
 deciso dal gruppo! Il gruppo può decidere una famiglia di ordinamenti che tutte
 le copie devono rispettare, fornendo così anche implementazioni diverse. L'or\i{}
-dinamento atomico non è interessato infatti all'ordine specico, ma al fatto che
+dinamento atomico non è interessato infatti all'ordine specifico, ma al fatto che
 tutti i componenti del gruppo ricevano i messaggi nello stesso ordine. L'ordinamento atomico può essere realizzato in
 maniera da rispettare sia (o uno solo, o
 nessuno) l'ordinamento FIFO che quello causale.
