--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -322,7 +322,7 @@ tanto in tanto dal client (che è sbloccato, e quindi può proseguire). Una
 volta che il risultato è disponibile sull'oggetto poll, il client si preoccupa
 di recuperarlo.
 In generale, un oggetto poll è un oggetto semplice ritagliato su quello
-specico risultato, e quindi non è generalizzato. Il mw si preoccupa di
+specifico risultato, e quindi non è generalizzato. Il mw si preoccupa di
 crearlo in maniera automatica. Come si potrebbe però gestire il risultato
 per più clienti (utilizzo della trasparenza, servizi di multicast?) oppure
 più interazioni (tanti poll object)?
