--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -71,7 +71,7 @@ oppurtune tecniche di replicazione spaziali e/o temporali:
 \begin{itemize}
  \item Se si hanno diverse macchine, che eseguono ognuna un algoritmo diverso ma forniscono lo stesso risultato,
  garantiamo la massima correttezza
- \item Se si hanno invece diverse macchine ognuna con un compito specico, si ottimizzalo throughput del sistema
+ \item Se si hanno invece diverse macchine ognuna con un compito specifico, si ottimizzalo throughput del sistema
 \end{itemize}
 
 $\bullet$ 
