--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -304,7 +304,7 @@ EP (N ) = 1
 E l'efficienza massima:
 Sotto queste condizioni si avrebbe che tutti i processori lavorano al massimo,
 ovvero non abbiamo processori idle che possono risultare inutili. Questi sono
-coecienti statistici, validi per tutto l'algoritmo. Quello che si può osservare `
+coefficienti statistici, validi per tutto l'algoritmo. Quello che si può osservare `
 che la situazione ideale la si avrebbe se lo speed-up dipendesse in maniera lineare dal numero dei processori. Una
 soluzione ideale non interessante sarebbe
 se si distribuisse i compiti ai processi in maniera uguale (un programma totalmente parallelo!), raccogliendo solo alla
