--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -8,7 +8,7 @@ sottoscrizione di consumer ad eventi; e così via. . . ).
 \i{}
 Nel modello di Internet erano stati studiati due sistemi: il broadcast (realmente inarontabile dal costo) e il multicast
 (realizzabile su indirizzi di classe
-D). Tuttavia, questi sistemi risultano essere ecienti nch` si lavora comunque
+D). Tuttavia, questi sistemi risultano essere efficienti nch` si lavora comunque
 con una località. Se invece si dovesse lavorare su più gruppi, è necessario utia
 lizzare come protocollo IGMP (utilizzo quindi di un protocollo non locale), che
 permette a una o più reti di trasmettere in multicast, realizzando una sorta di
