--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -222,7 +222,7 @@ ciamento del carico, ma per ottenere informazioni dai diversi nodi. Si ha quindi
 un movimento dovuto all'applicazione, e non da esigenze di ecienze per la
 computazione e diretto dal supporto!
 Il movimento è quindi una caratteristica base degli agenti mobili, per cui si
-deve cercare di determinare dei sistemi ecienti. Nulla per esempio impedisce
+deve cercare di determinare dei sistemi efficienti. Nulla per esempio impedisce
 ad un agente di ritornare su nodi già visitati.
 Per gli agenti si parla quindi di mobilità del codice (modello che va oltre
 al normale approccio C/S, per cui si passano solo dati. Sono sistemi utili per
