--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -251,7 +251,7 @@ lo stesso oggetto
 generale è più conveniente questo modo di lavorare, perché è il mw che si
 e u
 ee
-preoccupa di associare gli oggetti in maniera eciente.
+preoccupa di associare gli oggetti in maniera efficiente.
 $\bullet$ Marshalling/Unmarshalling: nel concentrato in generale o si lavora per
 valore o per riferimento. Nel concentrato quest'ultima opzione è quele
 la usata normalmente. Tuttavia, come si fa a passare proprio l'oggetto
