--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -129,7 +129,7 @@ Si deve quindi progettare il processo in maniera da poter trasportare quello che
 serve: in generale lo stato corrente più eventuali modiche che sono state apporu
 tate (magari si può trasportare anche solo un sottoinsieme delle informazioni).
 Il grosso problema della migrazione è quello del riuscire, nella maniera più
-eciente e meno costosa, a fornire ai clienti un sistema per accedere al processo
+efficiente e meno costosa, a fornire ai clienti un sistema per accedere al processo
 anche se è stato spostato.
 Una prima possibilità è quella di ridirigere i messaggi, sfruttando per esemae
 pio un'apposita struttura detta forwarder, in grado di farlo in maniera traspar`
