--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -79,7 +79,7 @@ sicurezza)
 $\bullet$ Si può anche definire una sezione di fault, nel caso che l'operazione non
 avesse avuto successo.
 La comunicazione non è necessariamente P2P ma anche molti a molti. Il problee
-ma di SOAP è che è altamente costoso (e poco eciente), perché siamo costretti
+ma di SOAP è che è altamente costoso (e poco efficiente), perché siamo costretti
 a lavorare a livello applicativo.
 \subsection{WSDL}
 `
